<resources>
    <string name="app_name">CoffeeShop</string>
    <string name="sign_up">Sign Up</string>
    <string name="coffee_shop_logo">Coffee Shop Logo</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="order">Order</string>
    <string name="view_basket">View Basket</string>
    <string name="return_to_shop">Return to Shop</string>
    <string name="empty_basket_message">Your basket is empty.\nGo buy some drinks!</string>
    <string name="banner_image">Banner Image</string>
</resources>
