<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/bannerImageView"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/banner_image"
        android:scaleType="center" />

    <TextView
        android:id="@+id/drinkNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/subheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/drinksListView"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Size"
        android:textColor="#252525"
        android:textSize="18dp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/sizeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <RadioButton
            android:id="@+id/smallRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small"
            android:theme="@style/MyRadioButton"/>

        <RadioButton
            android:id="@+id/mediumRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:theme="@style/MyRadioButton"/>

        <RadioButton
            android:id="@+id/largeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large"
            android:theme="@style/MyRadioButton"/>
    </RadioGroup>

    <TextView
        android:id="@+id/Subheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/drinksListView"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Quantity"
        android:textColor="#252525"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/quantitySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/addToBasketButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_basket"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/gold"/>

    <Button
        android:id="@+id/returnToShopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/gold"
        android:text="@string/return_to_shop" />
</LinearLayout>
