<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/emptyBasketMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_basket_message"
        android:visibility="gone"
        android:textSize="18sp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="77dp"
        android:gravity="center"
        android:text="Your Basket"
        android:textColor="#252525"
        android:textSize="26dp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/basketListView"
        android:layout_width="match_parent"
        android:layout_height="383dp"
        android:layout_above="@+id/orderButton"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/returnToShopButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="120dp"
        android:backgroundTint="@color/gold"
        android:text="@string/order" />

    <Button
        android:id="@+id/returnToShopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/gold"
        android:text="@string/return_to_shop" />
</RelativeLayout>
